k8s/visitorcounter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitorcounter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visitorcounter
  template:
    metadata:
      labels:
        app: visitorcounter
    spec:
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: visitorcounter
          image: ghcr.io/rupeshofficedata/visitorcounter:day3
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: visitorcounter
spec:
  selector:
    app: visitorcounter
  ports:
    - port: 5000
      targetPort: 5000
